# rust_vk_api_with_bullshit

./: Cargo.toml
src/: main.rs
src/api/: api.rs  longpoll.rs  macros.rs  mod.rs  session.rs
