[package]
name = "vk_api"
version = "0.1.0"
authors = ["andrey <a.simaranov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

num = "0.2.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
maplit = "*"